Fixed dependencies for CI

--- a/devtools/conda-envs/test_env.yaml
+++ b/devtools/conda-envs/test_env.yaml
@@ -9,6 +9,11 @@ dependencies:
   - python
   - pip
 
+    # Package dependencies
+  - numpy
+  - random
+  - matplotlib
+
     # Testing
   - pytest
   - pytest-cov
