Attempt to fix doc building

--- a/docs/requirements.yaml
+++ b/docs/requirements.yaml
@@ -5,8 +5,10 @@ dependencies:
   - python
   - pip
 
-
+    # Package depends
+  - numpy
+  - matplotlib
 
     # Pip-only installs
-  #- pip:
-
+  - pip:
+   - sphinx-autoapi
