--- a/docs/requirements.yaml
+++ b/docs/requirements.yaml
@@ -11,4 +11,5 @@ dependencies:
 
     # Pip-only installs
   - pip:
-          - sphinx-autoapi
+        - sphinx-autoapi
+        - sphinx-rtd-theme
